Refactoring/refactoring client sdk (#7)
* refactor: update proto dependencies and align classes with new definitions

Aligned proto-related classes and methods with the updated `zqnt-utils` version (`1.0.0-SNAPSHOT`). Refactored request/response mappings, replaced deprecated proto definitions, and updated lifecycle, notification, and command handling across various modules.

* import bugfix

* refactor: remove LiveDataResponse mapping and replace with CommandResponse

- Removed `LiveDataResponse` and its related mapping methods in `LiveDataMapper`.
- Updated signatures in `LiveData`, `LiveDataImpl`, and related methods to use `CommandResponse` instead of `LiveDataResponse`.

* chore: add NotificationResponse import to LiveDataImpl

* feat: handle license-related errors and add ZequentClient disposal

- Updated `isRetryableStreamError` in `LiveDataImpl` to handle `PERMISSION_DENIED` errors with a license-specific description check.
- Added `disposeZequentClient` method in `ZequentClientProducer` to ensure proper resource cleanup.

* update utils pr version

* bugfix

* chore: update dependencies and fix vulnerabilities

- Updated multiple dependencies, including `gRPC`, `protobuf`, `guava`, `slf4j`, and `jackson`.
- Fixed CVE issue in `jackson-databind` with version bump.
- Upgraded `stork` dependencies to version `3.0.0`.
- Included Proguard dependencies and version configuration.
- Added `provided` scope to `lombok`.

* feat: implement Connector gRPC client with domain models and batch session support

- Added `Connector` interface and `ConnectorImpl` implementation for accessing gRPC endpoints.
- Introduced domain models (`AssetMonitoringRequest`, `AssetMonitoringResponse`, `AssetPayloadResponse`, etc.) with Lombok annotations.
- Added `ConnectorBatchSession` interface and `ConnectorBatchSessionImpl` to support batch operations.
- Included unit tests for `ConnectorBatchSessionImpl` to validate session handling and error scenarios.
- Implemented `ConnectorMapper` f