@@ -1,11 +1,12 @@
 package com.zqnt.sdk.client.livedata.application.impl;
 
+import com.google.common.util.concurrent.ListenableFuture;
 import com.zqnt.sdk.client.config.GrpcClientConfig;
 import com.zqnt.sdk.client.grpc.GrpcResilience;
 import com.zqnt.sdk.client.livedata.application.LiveData;
 import com.zqnt.sdk.client.livedata.application.LiveDataMapper;
 import com.zqnt.sdk.client.livedata.domains.*;
-import com.zqnt.utils.livedata.proto.LiveDataNotificationResponse;
+import com.zqnt.utils.devicecontrol.proto.CommandResponse;
 import com.zqnt.utils.livedata.proto.LiveDataServiceGrpc;
 import com.zqnt.utils.livedata.proto.LiveDataTelemetryResponse;
 import io.grpc.ManagedChannel;
@@ -14,6 +15,7 @@ import io.grpc.stub.ClientCallStreamObserver;
 import io.grpc.stub.ClientResponseObserver;
 import io.grpc.stub.StreamObserver;
 import lombok.extern.slf4j.Slf4j;
+import org.jspecify.annotations.NonNull;
 
 import java.util.concurrent.*;
 import java.util.concurrent.atomic.AtomicBoolean;
@@ -124,7 +126,7 @@ public class LiveDataImpl implements LiveData {
         var protoRequest = liveDataMapper.toProtoRequest(request);
 
         // STOP is a one-shot server command, not a long-lived subscription.
-        if (request.getCommand() == com.zqnt.utils.common.proto.LiveDataServiceCommand.LIVE_DATA_COMMAND_STOP_TELEMETRY_STREAM) {
+        if (request.getCommand() == com.zqnt.utils.devicecontrol.proto.LiveDataServiceCommand.LIVE_DATA_COMMAND_STOP_TELEMETRY_STREAM) {
             handle.stop();
             try {
                 asyncStub.streamTelemetry(protoRequest, new StreamObserver<>() {
@@ -220,12 +222,6 @@ public class LiveDataImpl implements LiveData {
                 // Every inbound frame proves that the subscription is alive. In particular,
                 // telemetry heartbeats keep an offline/no-data asset from triggering reconnects.
                 subscriptionState.markReceived();
-                // Notification heartbeats are transport control frames. They reset the inactivity
-                // watchdog but must not reach application callbacks as domain notifications.
-                if (protoResponse instanceof LiveDataNotificationResponse notificationResponse
-                        && notificationResponse.hasStreamHeartbeat()) {
-                    return;
-                }
                 // No store-and-forward: keep at most one in-flight callback per stream.
                 if (!subscriptionState.tryBeginCallback()) {
                     return;
@@ -335,16 +331,21 @@ public class LiveDataImpl implements LiveData {
 
     static long reconnectDelayMillis(int attempt, long configuredBaseDelay, int configuredMaxExponent) {
         long baseDelay = Math.max(1L, configuredBaseDelay);
-        int exponent = Math.min(Math.max(0, attempt - 1), Math.min(30, Math.max(0, configuredMaxExponent)));
+        int exponent = Math.clamp(attempt - 1, 0, Math.clamp(configuredMaxExponent, 0, 30));
         long exponential = baseDelay > (30_000L >> exponent) ? 30_000L : baseDelay << exponent;
         long capped = Math.min(30_000L, exponential);
         long lower = Math.max(1L, Math.round(capped * 0.8d));
-        long upper = Math.max(lower, Math.min(30_000L, Math.round(capped * 1.2d)));
+        long upper = Math.clamp(Math.round(capped * 1.2d), lower, 30_000L);
         return ThreadLocalRandom.current().nextLong(lower, upper + 1L);
     }
 
     private boolean isRetryableStreamError(Throwable error) {
-        Status.Code code = Status.fromThrowable(error).getCode();
+        Status status = Status.fromThrowable(error);
+        Status.Code code = status.getCode();
+        if (code == Status.Code.PERMISSION_DENIED) {
+            String description = status.getDescription();
+            return description != null && description.startsWith("License ");
+        }
         return switch (code) {
             case CANCELLED, UNKNOWN, DEADLINE_EXCEEDED, RESOURCE_EXHAUSTED,
                     ABORTED, INTERNAL, UNAVAILABLE -> true;
@@ -397,14 +398,14 @@ public class LiveDataImpl implements LiveData {
      * @return CompletableFuture with the response
      */
     @Override
-    public CompletableFuture<LiveDataResponse> startLiveStream(LiveDataStartLiveStreamRequest request) {
+    public CompletableFuture<CommandResponse> startLiveStream(LiveDataStartLiveStreamRequest request) {
         log.info("Starting live stream for SN: {}, videoId: {}", request.getSn(), request.getVideoId());
 
         var protoRequest = liveDataMapper.toProtoStartLiveStreamRequest(request);
         int timeout = config != null ? config.getRequestTimeoutSeconds() : 30;
 
         return resilience.executeWithResilienceAsync(() -> {
-            CompletableFuture<LiveDataResponse> future = new CompletableFuture<>();
+            CompletableFuture<CommandResponse> future = new CompletableFuture<>();
 
             // Convert ListenableFuture to CompletableFuture with timeout
             var listenableFuture = futureStub.startLiveStream(protoRequest);
@@ -414,25 +415,29 @@ public class LiveDataImpl implements LiveData {
                 future.completeExceptionally(new TimeoutException("Start live stream timed out after " + timeout + "s"));
             }, timeout, TimeUnit.SECONDS);
 
-            com.google.common.util.concurrent.Futures.addCallback(listenableFuture,
-                    new com.google.common.util.concurrent.FutureCallback<>() {
-                        @Override
-                        public void onSuccess(com.zqnt.utils.livedata.proto.LiveDataResponse result) {
-                            timeoutTask.cancel(false);
-                            future.complete(liveDataMapper.fromProtoLiveDataResponse(result));
-                        }
-
-                        @Override
-                        public void onFailure(Throwable t) {
-                            timeoutTask.cancel(false);
-                            future.completeExceptionally(t);
-                        }
-                    },
-                    unaryCallbackExecutor
-            );
-
-            return future;
+            return getCommandResponseCompletableFuture(future, listenableFuture, timeoutTask);
         });
+    }
+
+    private CompletableFuture<CommandResponse> getCommandResponseCompletableFuture(CompletableFuture<CommandResponse> future, ListenableFuture<CommandResponse> listenableFuture, ScheduledFuture<?> timeoutTask) {
+        com.google.common.util.concurrent.Futures.addCallback(listenableFuture,
+                new com.google.common.util.concurrent.FutureCallback<>() {
+                    @Override
+                    public void onSuccess(CommandResponse result) {
+                        timeoutTask.cancel(false);
+                        future.complete(result);
+                    }
+
+                    @Override
+                    public void onFailure(@NonNull Throwable t) {
+                        timeoutTask.cancel(false);
+                        future.completeExceptionally(t);
+                    }
+                },
+                unaryCallbackExecutor
+        );
+
+        return future;
     }
 
     /**
@@ -442,14 +447,14 @@ public class LiveDataImpl implements LiveData {
      * @return CompletableFuture with the response
      */
     @Override
-    public CompletableFuture<LiveDataResponse> stopLiveStream(LiveDataStopLiveStreamRequest request) {
+    public CompletableFuture<CommandResponse> stopLiveStream(LiveDataStopLiveStreamRequest request) {
         log.info("Stopping live stream for SN: {}, videoId: {}", request.getSn(), request.getVideoId());
 
         var protoRequest = liveDataMapper.toProtoStopLiveStreamRequest(request);
         int timeout = config != null ? config.getRequestTimeoutSeconds() : 30;
 
         return resilience.executeWithResilienceAsync(() -> {
-            CompletableFuture<LiveDataResponse> future = new CompletableFuture<>();
+            CompletableFuture<CommandResponse> future = new CompletableFuture<>();
 
             var listenableFuture = futureStub.stopLiveStream(protoRequest);
 
@@ -457,36 +462,19 @@ public class LiveDataImpl implements LiveData {
                 future.completeExceptionally(new TimeoutException("Stop live stream timed out after " + timeout + "s"));
             }, timeout, TimeUnit.SECONDS);
 
-            com.google.common.util.concurrent.Futures.addCallback(listenableFuture,
-                    new com.google.common.util.concurrent.FutureCallback<>() {
-                        @Override
-                        public void onSuccess(com.zqnt.utils.livedata.proto.LiveDataResponse result) {
-                            timeoutTask.cancel(false);
-                            future.complete(liveDataMapper.fromProtoLiveDataResponse(result));
-                        }
-
-                        @Override
-                        public void onFailure(Throwable t) {
-                            timeoutTask.cancel(false);
-                            future.completeExceptionally(t);
-                        }
-                    },
-                    unaryCallbackExecutor
-            );
-
-            return future;
+            return getCommandResponseCompletableFuture(future, listenableFuture, timeoutTask);
         });
     }
 
     @Override
-    public CompletableFuture<LiveDataResponse> changeCameraLens(ChangeLensRequest request) {
+    public CompletableFuture<CommandResponse> changeCameraLens(ChangeLensRequest request) {
         log.info("Changing camera lens for SN: {}", request.getSn());
 
         var protoRequest = liveDataMapper.toProtoChangeLensRequest(request);
         int timeout = config != null ? config.getRequestTimeoutSeconds() : 30;
 
         return resilience.executeWithResilienceAsync(() -> {
-            CompletableFuture<LiveDataResponse> future = new CompletableFuture<>();
+            CompletableFuture<CommandResponse> future = new CompletableFuture<>();
 
             var listenableFuture = futureStub.changeLens(protoRequest);
 
@@ -494,36 +482,19 @@ public class LiveDataImpl implements LiveData {
                 future.completeExceptionally(new TimeoutException("Change lens timed out after " + timeout + "s"));
             }, timeout, TimeUnit.SECONDS);
 
-            com.google.common.util.concurrent.Futures.addCallback(listenableFuture,
-                    new com.google.common.util.concurrent.FutureCallback<>() {
-                        @Override
-                        public void onSuccess(com.zqnt.utils.livedata.proto.LiveDataResponse result) {
-                            timeoutTask.cancel(false);
-                            future.complete(liveDataMapper.fromProtoLiveDataResponse(result));
-                        }
-
-                        @Override
-                        public void onFailure(Throwable t) {
-                            timeoutTask.cancel(false);
-                            future.completeExceptionally(t);
-                        }
-                    },
-                    unaryCallbackExecutor
-            );
-
-            return future;
+            return getCommandResponseCompletableFuture(future, listenableFuture, timeoutTask);
         });
     }
 
     @Override
-    public CompletableFuture<LiveDataResponse> changeCameraZoom(ChangeZoomRequest request) {
+    public CompletableFuture<CommandResponse> changeCameraZoom(ChangeZoomRequest request) {
         log.info("Changing camera zoom for SN: {}", request.getSn());
 
         var protoRequest = liveDataMapper.toProtoChangeZoomRequest(request);
         int timeout = config != null ? config.getRequestTimeoutSeconds() : 30;
 
         return resilience.executeWithResilienceAsync(() -> {
-            CompletableFuture<LiveDataResponse> future = new CompletableFuture<>();
+            CompletableFuture<CommandResponse> future = new CompletableFuture<>();
 
             var listenableFuture = futureStub.changeZoom(protoRequest);
 
@@ -531,24 +502,7 @@ public class LiveDataImpl implements LiveData {
                 future.completeExceptionally(new TimeoutException("Change zoom timed out after " + timeout + "s"));
             }, timeout, TimeUnit.SECONDS);
 
-            com.google.common.util.concurrent.Futures.addCallback(listenableFuture,
-                    new com.google.common.util.concurrent.FutureCallback<>() {
-                        @Override
-                        public void onSuccess(com.zqnt.utils.livedata.proto.LiveDataResponse result) {
-                            timeoutTask.cancel(false);
-                            future.complete(liveDataMapper.fromProtoLiveDataResponse(result));
-                        }
-
-                        @Override
-                        public void onFailure(Throwable t) {
-                            timeoutTask.cancel(false);
-                            future.completeExceptionally(t);
-                        }
-                    },
-                    unaryCallbackExecutor
-            );
-
-            return future;
+            return getCommandResponseCompletableFuture(future, listenableFuture, timeoutTask);
         });
     }
 
